--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body
 {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -14,12 +14,115 @@ body
     background: linear-gradient(to bottom , rgba(77, 46, 85, 0.3),rgba(18, 62, 68, 0.8));
     color: #fff;
     font-family: 'Cairo', sans-serif;
-    text-align: center;
 }
+button:focus, button:active {border: none; border-style: none;outline: none;}
+.text-center{text-align: center;}
 form :is(input, button)
 {
     padding:0.5rem;
     font-size: 2rem;
     border: none;
     background: #fff; 
+}
+.todo-list{
+    list-style: none;
+    min-width: 30%;
+    
+}
+.todo{
+    margin: 0.5rem;
+    background:#fff;
+    color: #000;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
+.todo li{
+    flex: 1;
+    padding: 0rem 0.5rem;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+} 
+.trash-btn, .complete-btn{
+    background: #19b314;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 1rem;
+    opacity: 0.7;
+    transition: all ease-in 0.2s;
+    -webkit-transition: all ease-in 0.2s;
+    -moz-transition: all ease-in 0.2s;
+    -ms-transition: all ease-in 0.2s;
+    -o-transition: all ease-in 0.2s;
+}
+.trash-btn{ background: #e61717;}
+.trash-btn:hover, .complete-btn:hover {opacity: 1;}
+.fa-trash, .fa-check
+{
+    pointer-events: none;
+}
+.completed
+{
+    color: grey;
+    text-decoration: line-through;
+    opacity:0.5;
+}
+.fall
+{
+    transform: translateY(8rem) rotateZ(20deg);
+    -webkit-transform: translateY(8rem) rotateZ(20deg);
+    -moz-transform: translateY(8rem) rotateZ(20deg);
+    -ms-transform: translateY(8rem) rotateZ(20deg);
+    -o-transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*styling select items*/
+select
+{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+    color: azure;
+    width: 10rem;
+    cursor: pointer;
+    color: brown;
+    font-size: 1rem;
+    padding: 0.5rem;
+}
+
+.select-items
+{
+    margin: 0 1rem;
+    position: relative;
+    overflow: hidden;
+ 
+}
+
+.select-items:after{
+    content: "\25BC";
+    position: absolute;
+    background: #ff6f47;
+    top: 0;
+    right: 0;
+    padding: 0.5rem;
+    pointer-events: none;
 }
