--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,141 @@
-
+:root{
+    /*color*/
+    --white:#fff;
+    --black:#000;
+    /*background colors*/
+    --main-bg-color: #141922;
+    --input-bg-color: #202a3c;
+    --content-bg-color:#1b2330;
+    --footer-bg-color: #0b1523;
+}
+/*start of light mode*/
+.lightMode{
+    /*color*/
+    --white:#000;
+    /*backgroundcolors*/
+    --main-bg-color: #e7e7e7;
+    --input-bg-color: #f5f5f5;
+    --content-bg-color:#fff;
+    --footer-bg-color: #bebebe;
+}
+.lightMode.time
+{
+    transition: all ease-in-out 0.3s;
+    -webkit-transition: all ease-in-out 0.3s;
+    -moz-transition: all ease-in-out 0.3s;
+    -ms-transition: all ease-in-out 0.3s;
+    -o-transition: all ease-in-out 0.3s;
+}
+#lightModeToggle
+{
+    position: fixed;
+    top: 25%;
+    left: -15px;
+    width: 35px;
+    z-index: 9;
+    cursor: pointer;
+    background-color: var(--black);
+    border-radius: 20px;
+    overflow: hidden;
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    box-shadow: 0 0 15px var(--box-shadow-color1);
+    animation: lightMode 2s infinite cubic-bezier(0, 0, 0.50, 0.50);
+    -webkit-animation: lightMode 2s infinite cubic-bezier(0, 0, 0.50, 0.50);
+}
+@keyframes lightMode {
+    0%, 100%
+    {
+        box-shadow: 0 0 15px var(--box-shadow-color1);
+    }
+    50%
+    {
+        box-shadow: 0 0 25px var(--box-shadow-color1);
+    }
+}
+#lightModeToggle .lightModeRotate
+{
+    transition: all ease-in 0.4s;
+    -webkit-transition: all ease-in 0.4s;
+    -moz-transition: all ease-in 0.4s;
+    -ms-transition: all ease-in 0.4s;
+    -o-transition: all ease-in 0.4s;
+}
+#lightModeToggle div.moon , #lightModeToggle div.sun
+{
+    padding: 15%;
+    margin: 5%;
+    transition: all ease-in-out 0.2s;
+    -webkit-transition: all ease-in-out 0.2s;
+    -moz-transition: all ease-in-out 0.2s;
+    -ms-transition: all ease-in-out 0.2s;
+    -o-transition: all ease-in-out 0.2s;
+}
+#lightModeToggle img {
+    animation: lightModeIconRotate 15s infinite cubic-bezier(0, 0, 0.50, 0.50);
+    -webkit-animation: lightModeIconRotate 15s infinite cubic-bezier(0, 0, 0.50, 0.50);
+}
+@keyframes lightModeIconRotate {
+    0%
+    {
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+    }
+    50%
+    {
+           transform: rotate(180deg);
+           -webkit-transform: rotate(180deg);
+           -moz-transform: rotate(180deg);
+           -ms-transform: rotate(180deg);
+           -o-transform: rotate(180deg);
+    }
+    75%
+    {
+           transform: rotate(270deg);
+           -webkit-transform: rotate(270deg);
+           -moz-transform: rotate(270deg);
+           -ms-transform: rotate(270deg);
+           -o-transform: rotate(270deg);
+    }
+    100%
+    {
+           transform: rotate(360deg);
+           -webkit-transform: rotate(360deg);
+           -moz-transform: rotate(360deg);
+           -ms-transform: rotate(360deg);
+           -o-transform: rotate(360deg);
+    }
+}
+#lightModeToggle.disabled .lightModeRotate
+{
+    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+}
+#lightModeToggle.enabled .lightModeRotate
+{
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+}
+#lightModeToggle.enabled div.moon:nth-child(1) ,#lightModeToggle.disabled  div.sun:nth-child(2) {
+    opacity: 0;
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+}
 a{color: #4162f6; text-decoration: none;}
 body{
     padding: 0;
